# vyomaguard-phm

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VymoaGaurd_PHM_Project_Brief.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: ESA_ORBIT_AVAILABILITY_CONTRACT.yaml  ESA_ORBIT_TARGET_CONTRACT.yaml  OPSSAT_TELEMETRY_CONTRACT.yaml
data/fixtures/: scenarios.json
data/manifests/: esa_collision_avoidance.yaml  esa_opssat_ad.yaml  nasa_smap_msl.yaml
docs/: ARCHITECTURE.md  BUILD_PHASES.md  DATASET_LABEL_AUDIT.md  DATA_AND_LABELS.md  DECISION_LOG.md  DECISION_POLICY.md  EVALUATION_AND_ACCEPTANCE.md  GITHUB_SETUP.md  GLOSSARY.md  INTEGRATION_TEST_PLAN.md  OVERVIEW.md  PHASE_3_BASELINE.md  PHASE_4_REVIEW.md  PHASE_4_TELEMETRY_BASELINE.md  PHASE_5_DECISION_LAYER.md  PHASE_5_REVIEW.md  PHASE_6_DASHBOARD.md  PHASE_6_REVIEW.md  PRD.md  REQUIREMENTS_TRACEABILITY.md  ROADMAP.md  SAFETY_AND_LIMITATIONS.md  TRD.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/obsidian/: Communities.md  Project Map.md  README.md  VymoaGaurd PHM.md  graph.canvas
src/vymoa_guard_phm/: __init__.py  app.py  config.py  contracts.py  replay.py
tests/data_contract/: test_dataset_onboarding.py  test_manifests.py  test_orbit_target.py  test_splits.py  test_validation.py
tests/fixtures/: README.md
tests/integration/: test_assessment_flow.py  test_dashboard.py  test_orbit_evaluation.py  test_replay.py
(+27 files in other folders)
