[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vymoa-guard-phm"
version = "0.1.0"
description = "Explainable space mission-assurance prototype for conjunction risk and telemetry health."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pydantic>=2.0",
  "streamlit>=1.30",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
explainability = ["shap>=0.44"]
boosted = ["xgboost>=2.0"]
deep = ["torch>=2.1"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
vymoa-guard-replay = "vymoa_guard_phm.replay:main"
vymoa-guard-manifest-audit = "vymoa_guard_phm.data.manifest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
